# aurora

./: .gitignore  Cargo.toml  README.md  run.sh
app/: Cargo.toml
app/src/: interface.rs  main.rs  types.rs
app/src/app/: helpers.rs  mod.rs  subscription.rs  update.rs  view.rs
app/src/tasks/: mod.rs
app/src/types/: helpers.rs  mod.rs  tcp.rs
app/ui/: AuroraPlayer.slint  CustomComp.slint  LibraryView.slint  MainView.slint  NowPlayingView.slint  PlayerView.slint  QueueView.slint  TabSelectorView.slint  Types.slint
daemon/: Cargo.toml
daemon/src/: file_watcher_thread.rs  main.rs  mpris_thread.rs  theme_thread.rs  watcher_thread.rs
daemon/src/handlers/: albumart.rs  clear.rs  enqueue.rs  liked.rs  (+13 more)
iced-app/: Cargo.toml
iced-app/src/: main.rs
iced-app/src/app/: helpers.rs  mod.rs  subscription.rs  update.rs
iced-app/src/app/tasks/: mod.rs
iced-app/src/app/views/: center.rs  mod.rs  now_playing.rs  old_sidebar.rs  player.rs  sidebar.rs  tabs.rs
iced-app/src/types/: mod.rs  tcp.rs  unix.rs  virtuallist.rs
protocol/: Cargo.toml
protocol/src/: interface.rs  lib.rs  playlists.rs  songs.rs
slint-app/: Cargo.toml  build.rs
slint-app/src/: interface.rs  main.rs
slint-app/ui/: AuroraPlayer.slint  CustomComp.slint  MainView.slint  NowPlayingView.slint  PlayerView.slint  QueueView.slint  TabSelectorView.slint  Types.slint
themes/: ayu-dark.toml  blood-choco.toml  catppuccin-mocha.toml  config.toml  cyberpunk.toml  dracula.toml  everforest.toml  forest.toml  gruvbox.toml  mavenblack.toml  minimal.toml  nord.toml  rose-pine.toml  solarized-dark.toml  synth.toml  tokyo-night.toml
utils/: migrate.py
(+14 files in other folders)
