[package]
name = "aurora-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
slint = "1.14.1"
tokio = { version = "1.48.0", features = ["full"] }

aurora-protocol = {path = "../protocol"}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = "1.0.228"
serde_json = "1.0.145"
lru = "0.16.2"
image = "0.25"
uuid = { version = "1.18.1", features = ["serde"] }
base64 = "0.22.1"
toml = "0.9.10"


[build-dependencies]
slint-build = "1.14.1"
