[package]
name = "aurora-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iced = { version = "0.13.1", features = ["tokio", "image", "debug", "advanced", "lazy"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version=  "1.48.0", features= ["full"]}
uuid = { version = "1.18.1", features = ["serde"] }

aurora-protocol = {path = "../protocol/"}
lru = "0.16.2"
futures ="0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
base64 = "0.22.1"
iced_lazy = "0.6.1"
